--- a/Pages/index.html
+++ b/Pages/index.html
@@ -13,6 +13,7 @@
     <div id="header">
     </div>
     <div id="content">
+        <p>something</p>
     </div>
     <div id="footer">
     </div>
