--- a/Pages/index.html
+++ b/Pages/index.html
@@ -7,13 +7,23 @@
     <link rel="stylesheet" href="../Styles/index.css">
     <link rel="stylesheet" href="../Styles/MainLayout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="../Styles/HomePage.css">
     <title>Document</title>
 </head>
 <body>
     <div id="header">
     </div>
     <div id="content">
-        <p>something</p>
+      <div class="slider__wrapper">
+        <!-- <div class="slider">
+            <div class="silder__content">
+                <span class="slider__content--discount">Opening Sale DisCount 50%</span>
+                <div class="slider__content--title">SuperMarket For Fresh Grocery</div>
+                <div class="silder__content--sub">Introduced a new model for online grocery shopping and convenient home delivery</div>
+                <a class="silder__content--btn">Shop now <i class="fa-solid fa-arrow-right"></i></a>
+            </div>
+          </div> -->
+      </div>
     </div>
     <div id="footer">
     </div>
