--- a/Pages/StorePage.html
+++ b/Pages/StorePage.html
@@ -15,7 +15,7 @@
 
     </div>
 
-    <hr style="opacity: 0.5;margin: 2%;">
+    <!-- <hr style="opacity: 0.5;margin: 2%;"> -->
     <div class="main">
         <div class="stores" style="margin: 2% 0;">
             <ol class="breadcrum row-five">
