--- a/Pages/blogPage.html
+++ b/Pages/blogPage.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/Hit_BTL_Group_6/Styles/blogPage.css">
 
     <link rel="stylesheet" href="/Hit_BTL_Group_6/Styles/styles-c.css">
+    <link rel="stylesheet" href="../Styles/index.css">
+    <link rel="stylesheet" href="../Styles/MainLayout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +17,12 @@
 
 </head>
 <body>
-    
-    <hr style="opacity: 0.5;margin:2% 0;">
+    <div id="header">
+
+    </div>
+    <!-- <hr style="opacity: 0.5;margin:2% 0;"> -->
     <div class="main">
-        <div class="stores">
+        <div class="stores" style="margin: 2% 0;">
             <ol class="breadcrum row-five">
                 <li class="breadcrum-item"><a href="#!">Home</a></li>
                 <li class="breadcrum-item mb-sec" style="color: #0aad0a;">/</li>
@@ -347,5 +351,10 @@
             </div>
         </div>
     </div>
+    <div id="footer">
+
+    </div>
+    <script type="module" src="../Apps/StorePage.js"></script>
+    <script src="../Apps/index.js"></script>
 </body>
 </html>
