--- a/Pages/index.html
+++ b/Pages/index.html
@@ -55,6 +55,7 @@
       ></div>
     </div>
     <div id="footer"></div>
+    <div class="modal"></div>
     <script
       type="text/javascript"
       src="//code.jquery.com/jquery-1.11.0.min.js"
@@ -68,6 +69,13 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script type="module" src="../Apps/HomePage/index.js"></script>
+    <script type="module" src="../Apps/HomePage/Slider.js"></script>
+    <script type="module" src="../Apps/HomePage/CategoryProduct.js"></script>
+    <script type="module" src="../Apps/HomePage/Banner.js"></script>
+    <script type="module" src="../Apps/HomePage/PopularProduct.js"></script>
+    <script type="module" src="../Apps/HomePage/BestSellerProduct.js"></script>
+    <script type="module" src="../Apps/HomePage/NoteSection.js"></script>
+    <script type="module" src="../Apps/HomePage/Modal.js"></script>
     <script src="../Apps/index.js"></script>
   </body>
 </html>
