update hover cart-item

--- a/Pages/ShopPage.html
+++ b/Pages/ShopPage.html
@@ -272,6 +272,17 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="card__item">
                                     <div class="card__container">
@@ -302,6 +313,17 @@
                                                     Add
                                                 </a>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -337,6 +359,17 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="card__item">
                                     <div class="card__container">
@@ -370,6 +403,17 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="card__item">
                                     <div class="card__container">
@@ -400,6 +444,17 @@
                                                     Add
                                                 </a>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -435,6 +490,17 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="card__item">
                                     <div class="card__container">
@@ -465,6 +531,17 @@
                                                     Add
                                                 </a>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -500,6 +577,17 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="card__item">
                                     <div class="card__container">
@@ -531,6 +619,17 @@
                                                     Add
                                                 </a>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -566,13 +665,24 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="card-icon">
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-eye"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-regular fa-heart"></i>
+                                        </div>
+                                        <div class="card-icon__item">
+                                            <i class="fa-solid fa-arrow-right-arrow-left"></i>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="main__pagination">
                                 <div class="pagination__item">
                                     <i class="fa-solid fa-angle-left"></i>
                                 </div>
-                                <div class="pagination__item">
+                                <div class="pagination__item pagination__item--active">
                                     1
                                 </div>
                                 <div class="pagination__item">
