add mainlayout and change structure assets

--- a/Pages/AboutUs.html
+++ b/Pages/AboutUs.html
@@ -39,7 +39,7 @@
                         </p>
                     </div>
                     <div class="future__item">
-                        <img src="../assets/imgs/about-us/about-img.jpg" alt="About Imgage">
+                        <img src="../assets/imgs/about-img.jpg" alt="About Imgage">
                     </div>
                 </div>
             </section>
@@ -49,7 +49,7 @@
                     <div class="start__main">
                         <div class="start-item">
                             <div class="start-item__container">
-                                <img src="../assets/imgs/about-us/about-icons-1.svg" alt="About icon 1">
+                                <img src="../assets/svgs/about-icons-1.svg" alt="About icon 1">
                                 <h4>
                                     Grow my business with Freshcart
                                 </h4>
@@ -65,7 +65,7 @@
                         <div class="start-item">
                             <div class="start-item__container">
                                 <div class="start-item__icon">
-                                    <img src="../assets/imgs/about-us/about-icons-2.svg" alt="About icon 2">
+                                    <img src="../assets/svgs/about-icons-2.svg" alt="About icon 2">
                                 </div>
                                 <h4>
                                     Advertise my brand on Freshcart
@@ -82,7 +82,7 @@
                         <div class="start-item">
                             <div class="start-item__container">
                                 <div class="start-item__icon">
-                                    <img src="../assets/imgs/about-us/about-icons-3.svg" alt="About icon 3">
+                                    <img src="../assets/svgs/about-icons-3.svg" alt="About icon 3">
                                 </div>
                                 <h4>
                                     Advertise my brand on Freshcart
@@ -150,7 +150,7 @@
                             <small>Vice President, Retail</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-1.png" alt="Team 1">
+                            <img src="../assets/imgs/team-1.png" alt="Team 1">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -159,7 +159,7 @@
                             <small>Chief Financial Officer</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-2.png" alt="Team 2">
+                            <img src="../assets/imgs/team-2.png" alt="Team 2">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -168,7 +168,7 @@
                             <small>Chief Communications Officer</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-3.png" alt="Team 3">
+                            <img src="../assets/imgs/team-3.png" alt="Team 3">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -177,7 +177,7 @@
                             <small>Chief Technology Officer</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-4.png" alt="Team 4">
+                            <img src="../assets/imgs/team-4.png" alt="Team 4">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -186,7 +186,7 @@
                             <small>Chief Human Resources Officer</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-5.png" alt="Team 5">
+                            <img src="../assets/imgs/team-5.png" alt="Team 5">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -195,7 +195,7 @@
                             <small>Vice President, Retail</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-1.png" alt="Team 1">
+                            <img src="../assets/imgs/team-1.png" alt="Team 1">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -204,7 +204,7 @@
                             <small>Chief Financial Officer</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-2.png" alt="Team 2">
+                            <img src="../assets/imgs/team-2.png" alt="Team 2">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -213,7 +213,7 @@
                             <small>Chief Communications Officer</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-3.png" alt="Team 3">
+                            <img src="../assets/imgs/team-3.png" alt="Team 3">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -222,7 +222,7 @@
                             <small>Chief Technology Officer</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-4.png" alt="Team 4">
+                            <img src="../assets/imgs/team-4.png" alt="Team 4">
                         </div>
                     </div>
                     <div class="leadership-item">
@@ -231,7 +231,7 @@
                             <small>Chief Human Resources Officer</small>
                         </div>
                         <div class="leadership-item__img">
-                            <img src="../assets/imgs/about-us/team-5.png" alt="Team 5">
+                            <img src="../assets/imgs/team-5.png" alt="Team 5">
                         </div>
                     </div>
                 </div>
