--- a/Pages/Error404.html
+++ b/Pages/Error404.html
@@ -25,7 +25,7 @@
                     <div class="error404__main">
                         <div class="error404__heading">
                             <a href="index.html">
-                                <img src="../assets/imgs/freshcart-logo.svg" alt="FreshCart Logo">
+                                <img src="../assets/svgs/freshcart-logo.svg" alt="FreshCart Logo">
                             </a>
                         </div>
                         <div class="error404__content">
@@ -47,7 +47,7 @@
                                 </div>
                             </div>
                             <div class="content__img">
-                                <img src="../assets/imgs/error404.svg" alt="Error 404">
+                                <img src="../assets/svgs/error404.svg" alt="Error 404">
                             </div>
                         </div>
                     </div>
