--- a/Pages/index.html
+++ b/Pages/index.html
@@ -29,7 +29,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="header"></div>
+    <div id="header">
+    </div>
     <div id="content">
       <div class="slider__wrapper"></div>
       <div class="content__category content--reuse">
