--- a/Pages/StorePage.html
+++ b/Pages/StorePage.html
@@ -14,8 +14,6 @@
     <div id="header">
 
     </div>
-
-    <!-- <hr style="opacity: 0.5;margin: 2%;"> -->
     <div class="main">
         <div class="stores" style="margin: 2% 0;">
             <ol class="breadcrum row-five">
@@ -43,7 +41,7 @@
         <div class="second">
             <div class="container">
                  <div class="row-three">
-                    <h6>We have <span style="color: #0aad0a;">36 </span>vendors now</h6></div>
+                    <h4 style="margin-left: -4%;font-weight: 550;opacity: 0.8;">We have <span style="color: #0aad0a;">36 </span>vendors now</h4></div>
                 <div class="second-bt">
                     <div class="row-row">
                         <div class="col">
