--- a/Pages/blogPage.html
+++ b/Pages/blogPage.html
@@ -332,7 +332,7 @@
                             <ul class="number">
                                 <li class="page-item" style="background-color: aliceblue;">
                                     <a href="#">
-                                        <i class="fa-regular fa-chevron-left"></i>
+                                        <i class="fa-solid fa-chevron-left"></i>
                                     </a>
                                 </li>
                                 <li class="page-item" style="background-color: #0aad0a;"><a href="#">1</a></li>
@@ -341,7 +341,7 @@
                                 <li class="page-item"><a href="#">12</a></li>
                                 <li class="page-item">
                                     <a href="#">
-                                        <i class="fa-regular fa-chevron-right"></i>
+                                        <i class="fa-solid fa-chevron-right"></i>
                                     </a>
                                 </li>
                             </ul>
