--- a/Pages/store-single.html
+++ b/Pages/store-single.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Store Single</title>
-    <link rel="stylesheet" href="/Styles/store-single.css">
-    <link rel="stylesheet" href="/Styles/index.css">
-    <link rel="stylesheet" href="/Styles/MainLayout.css">
+    <link rel="stylesheet" href="../Styles/store-single.css">
+    <link rel="stylesheet" href="../Styles/index.css">
+    <link rel="stylesheet" href="../Styles/MainLayout.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +38,7 @@
                         <div class="left">
                         <div class="row-content column">
                             <div class="imgs">
-                                <img src="/assets/img/stores-logo-1.svg" alt="">
+                                <img src="../assets/img/stores-logo-1.svg" alt="">
                             </div>
                             <div class="mt-4">
                                 <h1>E-Grocery Super Market</h1>
@@ -153,7 +153,7 @@
                                         </div>
                                     </div>
                                     <div class="one-left-img">
-                                        <img src="/assets/img/one.svg" alt="">
+                                        <img src="../assets/img/one.svg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -191,7 +191,7 @@
                                                     <span>Sale</span>
                                                 </div>
                                                 <a href="#">
-                                                    <img src="/assets/img/product-img-1.jpg" alt="">
+                                                    <img src="../assets/img/product-img-1.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -242,7 +242,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="">
-                                                    <img src="/assets/img/product-img-2.jpg" alt="">
+                                                    <img src="../assets/img/product-img-2.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -291,7 +291,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="">
-                                                    <img src="/assets/img/product-img-3.jpg" alt="">
+                                                    <img src="../assets/img/product-img-3.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -343,7 +343,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="">
-                                                    <img src="/assets/img/product-img-2.jpg" alt="">
+                                                    <img src="../assets/img/product-img-2.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -392,7 +392,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="#">
-                                                    <img src="/assets/img/product-img-6.jpg" alt="">
+                                                    <img src="../assets/img/product-img-6.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -443,7 +443,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="#">
-                                                    <img src="/assets/img/product-img-2.jpg" alt="">
+                                                    <img src="../assets/img/product-img-2.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -497,7 +497,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="">
-                                                    <img src="/assets/img/product-img-2.jpg" alt="">
+                                                    <img src="../assets/img/product-img-2.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -546,7 +546,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="#">
-                                                    <img src="/assets/img/product-img-8.jpg" alt="">
+                                                    <img src="../assets/img/product-img-8.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -597,7 +597,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="#">
-                                                    <img src="/assets/img/product-img-9.jpg" alt="">
+                                                    <img src="../assets/img/product-img-9.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
@@ -648,7 +648,7 @@
                                         <div class="card-body">
                                             <div class="text-center card-position">
                                                 <a href="#">
-                                                    <img src="/assets/img/product-img-10.jpg" alt="">
+                                                    <img src="../assets/img/product-img-10.jpg" alt="">
                                                 </a>
                                             </div>
                                             <div class="text-small mb-1">
