--- a/Pages/wen-be.html
+++ b/Pages/wen-be.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/Styles/style.css" />
+    <!-- <link rel="stylesheet" href="../Styles/styles-c.css"> -->
+    <link rel="stylesheet" href="../Styles/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -24,7 +25,7 @@
     <div class="heder-a">
       <div class="main">
         <div class="head" id="div1">
-          <a href="/Pages/store-single.html"
+          <a href="../Pages/store-single.html"
             ><i
               class="fa-sharp fa-solid fa-xmark"
               style="margin-left: 100%; font-size: 25px; margin-top: 1%"
@@ -38,25 +39,25 @@
               <div class="left-2">
                 <div class="img-zoom">
                   <img
-                    src="/assets/img/product-single-img-1.jpg"
+                    src="../assets/img/product-single-img-1.jpg"
                     alt=""
                   />
                 </div>
                 <div class="img-zoom">
                   <img
-                    src="/assets/img/product-single-img-2.jpg"
+                    src="../assets/img/product-single-img-2.jpg"
                     alt=""
                   />
                 </div>
                 <div class="img-zoom">
                   <img
-                    src="/assets/img/product-single-img-3.jpg"
+                    src="../assets/img/product-single-img-3.jpg"
                     alt=""
                   />
                 </div>
                 <div class="img-zoom">
                   <img
-                    src="/assets/img/product-single-img-4.jpg"
+                    src="../assets/img/product-single-img-4.jpg"
                     alt=""
                   />
                 </div>
@@ -64,25 +65,25 @@
               <div class="left-3">
                 <div class="img-pr">
                   <img
-                    src="/assets/img/product-single-img-1.jpg"
+                    src="../assets/img/product-single-img-1.jpg"
                     alt=""
                   />
                 </div>
                 <div class="img-pr">
                   <img
-                    src="/assets/img/product-single-img-2.jpg"
+                    src="../assets/img/product-single-img-2.jpg"
                     alt=""
                   />
                 </div>
                 <div class="img-pr">
                   <img
-                    src="/assets/img/product-single-img-3.jpg"
+                    src="../assets/img/product-single-img-3.jpg"
                     alt=""
                   />
                 </div>
                 <div class="img-pr">
                   <img
-                    src="/assets/img/product-single-img-4.jpg"
+                    src="../assets/img/product-single-img-4.jpg"
                     alt=""
                   />
                 </div>
