--- a/Pages/store-single.html
+++ b/Pages/store-single.html
@@ -230,7 +230,8 @@
 
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <!-- <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a> -->
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -280,7 +281,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -331,7 +332,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -381,7 +382,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -432,7 +433,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -485,7 +486,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -535,7 +536,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -586,7 +587,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -637,7 +638,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
@@ -690,7 +691,7 @@
                                     </div>
                                     <div class="hu">
                                         <div class="icon">
-                                            <a href="/Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
+                                            <a href="../Pages/wen-be.html"><i class="fa-regular fa-eye"></i></a>
                                             <i class="fa-regular fa-heart"></i>
                                             <i class="fa-solid fa-arrow-right-arrow-left"></i>
                                         </div>
