--- a/Pages/store-gird.html
+++ b/Pages/store-gird.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="header">
+    <!-- <div id="header">
 
-    </div>
+    </div> -->
     <div class="main">
         <div class="stores" style="margin: 2% 0;">
             <ol class="breadcrum row-five">
@@ -31,7 +31,7 @@
         <div class="cow">
             <div class="content-ct">
                 <div class="row-three">
-                    <p >Stores</p>
+                    <p style=" color: #21313c;">Stores</p>
                 </div>
                 <div class="bg-right">
                    <img src="../assets/img/one.svg" alt="">
@@ -41,7 +41,8 @@
         <div class="second">
             <div class="container">
                  <div class="row-three">
-                    <h4 style="margin-left: 1%;font-weight: 550;opacity: 0.8; display: inline;">We have <span style="color: #0aad0a;">36 </span>vendors now</h4></div>
+                    <h4 style="margin-left: 1%;font-weight: 550;opacity: 0.8; display: inline;">We have <span style="color: #0aad0a;">36 </span>vendors now</h4>
+                </div>
                 <div class="second-bt">
                     <div class="row-row">
                         <div class="col">
@@ -491,9 +492,9 @@
         
     </div>
     
-    <div id="footer">
+    <!-- <div id="footer">
 
-    </div>
+    </div> -->
     <script type="module" src="../Apps/StorePage.js"></script>
     <script src="../Apps/index.js"></script>
 </body>
