--- a/Pages/blogPage.html
+++ b/Pages/blogPage.html
@@ -49,7 +49,7 @@
                 <div class="row row-content row-center row-six">
                     <div class="content-ct content-9 content-10">
                         <a href="#">
-                            <div class="img-zoom">
+                            <div class="img-zoom1">
                                 <img src="../assets/img/blog-large.jpg" alt="">
                                 
                             </div>
