--- a/Pages/store-gird.html
+++ b/Pages/store-gird.html
@@ -11,9 +11,9 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <div id="header">
+    <div id="header">
 
-    </div> -->
+    </div>
     <div class="main">
         <div class="stores" style="margin: 2% 0;">
             <ol class="breadcrum row-five">
@@ -492,9 +492,9 @@
         
     </div>
     
-    <!-- <div id="footer">
+    <div id="footer">
 
-    </div> -->
+    </div>
     <script type="module" src="../Apps/StorePage.js"></script>
     <script src="../Apps/index.js"></script>
 </body>
